@@ -1,3 +1,7 @@
+2009-01-31 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add option -d to all test tools.
+
 2009-01-29 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Load dictionaries with the new dictionary loader.
